@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-07-14T01:09:56Z",
-  "count_outdated" : 389,
-  "uniques_outdated" : 211,
-  "count" : 421,
-  "uniques" : 227,
+  "timestamp" : "2022-07-14T16:20:06Z",
+  "count_outdated" : 390,
+  "uniques_outdated" : 212,
+  "count" : 422,
+  "uniques" : 228,
   "clones" : [
-    {
-      "timestamp": "2022-06-30T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-07-01T00:00:00Z",
       "count": 4,
@@ -100,6 +93,13 @@
       "timestamp": "2022-07-13T00:00:00Z",
       "count": 2,
       "count_minmax": [ 1, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-07-14T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
