@@ -3,11 +3,6 @@
   "uniques": 3,
   "clones": [
     {
-      "timestamp": "2022-06-30T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
       "timestamp": "2022-07-01T00:00:00Z",
       "count": 4,
       "uniques": 2
@@ -70,6 +65,11 @@
     {
       "timestamp": "2022-07-13T00:00:00Z",
       "count": 2,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-07-14T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
